# StdExt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Experimental_Files_List.txt  readme.md
VS2017/: StdExt.vcxitems  StdExt.vcxitems.filters
VS2017/Dynamic/StdExt/: StdExt.vcxproj
VS2017/Static/StdExt/: StdExt.vcxproj
VS2019/: StdExt.vcxitems  StdExt.vcxitems.filters
VS2019/Dynamic/StdExt/: StdExt.vcxproj
VS2019/Static/StdExt/: StdExt.vcxproj
VS2022/: LintRules.ruleset  StdExt.sln
VS2022/Sources/: StdExt Sources.vcxitems  StdExt Sources.vcxitems.filters
VS2022/Test/: Test.vcxproj  Test.vcxproj.filters
attic/include/Concurrent/: CallableTask.h  Condition.h  Mutex.h  PredicatedCondition.h  Queue.h  RWLock.h  ThreadPool.h  ThreadRunner.h
attic/src/Concurrent/: Mutex.cpp  Task.cpp  ThreadRunner.cpp  Wait.cpp
attic/test/: Concurrent_Test.cpp
docs/: Doxyfile
include/StdExt/: Any.h  Buffer.h  Callable.h  CallableTraits.h  Compare.h  Concepts.h  ConstString.h  Defaultable.h  Event.h  Exceptions.h  FunctionPtr.h  FunctionTraits.h  InPlace.h  Matrix.h  Memory.h  Number.h  Operators.h  ParameterPack.h  Platform.h  Signals.h  Span.h  StdExt.h  StdExt.ixx  String.h  Tags.h  TemplateTraits.h  TemplateUtility.h  Type.h  TypeInfo.h  UID.h  UnicodeString.h  Utility.h  Vec.h
include/StdExt/Chrono/: Duration.h  Stopwatch.h
include/StdExt/Collections/: Collections.h  Queue.h  SharedArray.h  Span.h  Vector.h
include/StdExt/Concurrent/: CallableTask.h  Concurrent.h  Condition.h  FunctionTask.h  MessageLoop.h  Mutex.h  PredicatedCondition.h  Producer.h  Queue.h  RWLock.h  Scheduler.h  SyncPoint.h  SysTask.h  Task.h  TaskLoop.h  ThreadRunner.h  Timer.h  Utility.h  Wait.h
include/StdExt/Const/: String.h
include/StdExt/Debug/: Debug.h
include/StdExt/IpComm/: Endpoint.h  Exceptions.h  IpAddress.h  IpComm.h  NetworkInterface.h  SockAddr.h  TcpConnection.h  TcpServer.h  Udp.h
include/StdExt/Memory/: Alignment.h  BitMask.h  Casting.h  Endianess.h  SharedData.h  SharedPtr.h  TaggedPtr.h  Utility.h
include/StdExt/Serialize/: Exceptions.h  Serialize.h
include/StdExt/Serialize/Binary/: Binary.h  BufferedStream.h  ByteStream.h  File.h  MemoryStream.h  TestByteStream.h
include/StdExt/Serialize/CodeGen/: Document.h  Documentation.h  Enumeration.h  Exceptions.h  Field.h  Namespace.h  Type.h
include/StdExt/Serialize/Text/: Text.h
include/StdExt/Serialize/XML/: Element.h  XML.h
include/StdExt/Signals/: Aggregator.h  CallableHandler.h  Constant.h  Event.h  FunctionHandlers.h  Invocable.h  Invokable.h  Logic.h  Mappings.h  Settable.h  Subscription.h  Swappable.h  Watchable.h  Wiring.h
include/StdExt/Streams/: BufferedStream.h  ByteStream.h  File.h  FileStream.h  MemoryStream.h  SocketStream.h  TestByteStream.h
include/StdExt/Tasking/: CallableTask.h  SyncInterface.h  SyncPoint.h  SysTask.h  Task.h  Tasking.h  Timer.h
include/StdExt/Test/: Test.h
include/StdExt/Unicode/: Iterator.h
src/: Buffer.cpp  ConstString.cpp  Event.cpp  Exceptions.cpp  Matrix.cpp  Memory.cpp  Number.cpp  String.cpp  UID.cpp  UnicodeString.cpp  Vec.cpp
src/Concurrent/: Condition.cpp  FunctionTask.cpp  Mutex.cpp  RWLock.cpp  Scheduler.cpp  SyncPoint.cpp  SysTask.cpp  Task.cpp  TaskLoop.cpp  ThreadRunner.cpp  Timer.cpp  Wait.cpp
src/IpComm/: Endpoint.cpp  Exceptions.cpp  IpAddress.cpp  IpCommOpaque.cpp  IpCommOpaque.h  IpExceptions.cpp  NetworkInterface.cpp  SockAddr.cpp  TcpConnection.cpp  TcpOpaque.cpp  TcpOpaque.h  TcpServer.cpp  Udp.cpp
src/Memory/: Alignment.cpp
src/Serialize/: Exceptions.cpp  SerializeExceptions.cpp
src/Serialize/Binary/: Binary.cpp  BufferedStream.cpp  ByteStream.cpp  File.cpp  MemoryStream.cpp  TestByteStream.cpp
src/Serialize/CodeGen/: Document.cpp  DocumentInternal.h  Documentation.cpp  Enumeration.cpp  EnumerationInternal.h  Field.cpp  Namespace.cpp  NamespaceInternal.h  StringLiterals.h  Type.cpp
src/Serialize/Text/: Text.cpp
src/Serialize/XML/: Element.cpp  ElementInternal.cpp  ElementInternal.h  XML.cpp
src/Streams/: BufferedStream.cpp  ByteStream.cpp  File.cpp  FileStream.cpp  MemoryStream.cpp  SocketStream.cpp  TestByteStream.cpp
src/Tasking/: SyncInterface.cpp  SyncPoint.cpp  SysTask.cpp  Task.cpp  ThreadPool.cpp  Timer.cpp
src/Tasking/internal/: SysTaskInternal.h  ThreadPool.h
test/: Any_Test.cpp  CallableTraits_test.cpp  Callable_test.cpp  Collections_Test.cpp  Compare_test.cpp  Concepts_Test.cpp  Concurrent_Test.cpp  Const_test.cpp  Defaultable_test.cpp  FunctionPtr_test.cpp  FunctionTraits_test.cpp  InPlace_test.cpp  IpComm_test.cpp  Matrix_Test.cpp  Memory_test.cpp  Number_Test.cpp  Operators_test.cpp  SerializeTesting.h  Serialize_test.cpp  Signal_Test.cpp  Stream_Test.cpp  String_Test.cpp  Tasking_test.cpp  TemplateUtility_test.cpp  TestClasses.cpp  TestClasses.h  TypeInfo_test.cpp  Unicode_Test.cpp  Utility_test.cpp  Vec_Test.cpp  main.cpp
test/Concurrent/: Predicated_test.cpp  Timer_test.cpp
xCode/StdExt.xcodeproj/: project.pbxproj
xCode/StdExt.xcworkspace/: contents.xcworkspacedata
xCode/StdExt/StdExt.xcodeproj/: project.pbxproj
xCode/Test/Test.xcodeproj/: project.pbxproj
xCode/Test/Test.xcodeproj/xcshareddata/xcschemes/: Test.xcscheme
